<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/add_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/enter_contact_details_here"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

        <EditText
            android:id="@+id/sos_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/titleTxt"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:layout_marginEnd="@dimen/pad_5dp"
            android:layout_marginBottom="@dimen/pad_5dp"
            android:background="@drawable/border"
            android:hint="Enter Name"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:inputType="text"
            android:padding="@dimen/dp_5"
            android:textColor="@color/black" />

        <com.mayan.sospluginmodlue.countrycode.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_below="@+id/sos_name"
            android:background="@drawable/border"
            app:defaultNameCode="IN"
            android:padding="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            app:hideNameCode="true"
            app:textSize="16sp" />

        <EditText
            android:id="@+id/sos_mbl_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/sos_name"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/ccp"
            android:layout_marginStart="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:layout_marginEnd="@dimen/pad_5dp"
            android:layout_marginBottom="@dimen/pad_5dp"
            android:background="@drawable/border"
            android:hint="Enter Mobile Number"
            android:inputType="number"
            android:padding="@dimen/dp_5"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_below="@id/sos_mbl_number"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nobtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/yesbtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_accept"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/no_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/there_is_no_contact_in_your_list_please_add_contact"
            android:textAlignment="center"
            android:textColor="@color/button_accept"
            android:textSize="18sp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/button_accept"
                android:text="@string/add"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>